<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.fieldid</groupId>
	<artifactId>fieldid-root</artifactId>
    <version>2014.6.1</version>
	<packaging>pom</packaging>
	<name>Field ID Parent POM</name>
	<modules>
		<module>fid-core</module>
		<module>fid-test-utils</module>
		<module>fid-cert-data</module>
		<module>fid-web</module>
		<module>fid-exporter</module>
		<module>fid-ws</module>
        <module>fid-migrations</module>
        <module>fid-connection-monitor</module>
        <module>fid-index-validator</module>
        <module>fid-pub-ws</module>
    </modules>
    <properties>
        <hibernate.version>3.6.0.Final</hibernate.version>
        <spring.version>4.0.3.RELEASE</spring.version>
        <commons.io.version>2.4</commons.io.version>
        <commons.lang.version>2.5</commons.lang.version>
        <commons.collections.version>3.2.1</commons.collections.version>
        <commons.fileupload.version>1.3.1</commons.fileupload.version>
        <commons.cli.version>1.2</commons.cli.version>
        <struts.version>2.3.16</struts.version>
        <junit.version>4.8.2</junit.version>
        <java.version>1.8</java.version>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
        <maven.jar.plugin.version>2.5</maven.jar.plugin.version>
        <maven.assembly.plugin.version>2.4.1</maven.assembly.plugin.version>
        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
        <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
        <buildhelper.maven.plugin.version>1.9</buildhelper.maven.plugin.version>
        <sass.maven.plugin.version>1.1.0</sass.maven.plugin.version>
        <buildnumber.maven.plugin.version>1.0-beta-3</buildnumber.maven.plugin.version>
    </properties>
	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://repo.n4systems.net/artifactory/libs-release</url>
		</repository>
		<repository>
			<snapshots />
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>http://repo.n4systems.net/artifactory/libs-snapshot</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>plugins-release</name>
			<url>http://repo.n4systems.net/artifactory/plugins-release</url>
		</pluginRepository>
		<pluginRepository>
			<snapshots />
			<id>snapshots</id>
			<name>plugins-snapshot</name>
			<url>http://repo.n4systems.net/artifactory/plugins-snapshot</url>
		</pluginRepository>
	</pluginRepositories>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.plugin.version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
                <plugin>
                    <groupId>org.jasig.maven</groupId>
                    <artifactId>sass-maven-plugin</artifactId>
                    <version>${sass.maven.plugin.version}</version>
                </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
				<configuration>
                    <!--<compilerArgs>-->
                        <!--<arg>-Xlint:deprecation</arg>-->
                        <!--<arg>-Xlint:unchecked</arg>-->
                    <!--</compilerArgs>-->
                    <!--<verbose>true</verbose>-->
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
				<configuration>
					<uniqueVersion>false</uniqueVersion>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-ws</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-test-utils</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-cert-data</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fieldid</groupId>
				<artifactId>fid-core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
                <groupId>com.fieldid</groupId>
                <artifactId>fid-migrations</artifactId>
                <version>${project.version}</version>
            </dependency>
			<dependency>
                <groupId>com.fieldid</groupId>
                <artifactId>fid-connection-monitor</artifactId>
                <version>${project.version}</version>
            </dependency>
		</dependencies>
	</dependencyManagement>
	<scm>
		<connection>scm:svn:https://fieldid.jira.com/svn/WEB</connection>
		<developerConnection>scm:svn:https://fieldid.jira.com/svn/WEB</developerConnection>
	</scm>
</project>
